Trying to fix animation flicker on Safari
Visibility made hidden on most animations

--- a/QUE 3.css
+++ b/QUE 3.css
@@ -48,7 +48,7 @@ div {
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
     
-	visibility: visible !important;	
+	visibility: hidden !important;	
 }
 
 .animated3 {
@@ -66,7 +66,7 @@ div {
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
     
-	visibility: visible !important;	
+	visibility: hidden !important;	
 }
 
 .fadeIn {
